--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,10 +1,10 @@
 PORT=4000
 DB_URI = "mongodb://localhost:27017/Ecommerce"
 JWT_SECRET = 
-COOKIE_EXPIRE = 5
+COOKIE_EXPIRE = 
 STRIPE_API_KEY= 
 STRIPE_SECRET_KEY=  
-JWT_EXPIRE= 5d
+JWT_EXPIRE= 
 SMPT_SERVICE = 
 SMPT_MAIL= 
 SMPT_PASSWORD= 
