Login Signup and update

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,15 +1,15 @@
 PORT=4000
 DB_URI = "mongodb://localhost:27017/Ecommerce"
-JWT_SECRET = 
-COOKIE_EXPIRE = 
-STRIPE_API_KEY= 
-STRIPE_SECRET_KEY=  
-JWT_EXPIRE= 
-SMPT_SERVICE = 
-SMPT_MAIL= 
-SMPT_PASSWORD= 
-SMPT_HOST= 
-SMPT_PORT= 
-CLOUDINARY_NAME= 
-CLOUDINARY_API_KEY=
+JWT_SECRET =
+COOKIE_EXPIRE = 5
+STRIPE_API_KEY=
+STRIPE_SECRET_KEY=
+JWT_EXPIRE= 5d
+SMPT_SERVICE = gmail
+SMPT_MAIL=
+SMPT_PASSWORD=
+SMPT_HOST= smtp.gmail.com
+SMPT_PORT= 465
+CLOUDINARY_NAME=
+CLOUDINARY_API_KEY= 
 CLOUDINARY_API_SECRET=
