--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "connect-mongo": "^4.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "mongoose": "^6.1.3",
     "nodemon": "^2.0.15"
   }
