--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,32 +5,37 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/x-data-grid": "^5.3.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.0",
     "overlay-navbar": "^1.1.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
-    "react-bootstrap": "^2.1.0",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
+    "react-image-magnifiers": "^1.4.0",
     "react-js-pagination": "^3.0.3",
     "react-material-ui-carousel": "^3.1.1",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-react-session": "^2.6.1",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.2",
     "webfontloader": "^1.6.28"
