Dashboard to Payment

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,15 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/x-data-grid": "^5.3.0",
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.22.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "chart.js": "^3.7.0",
+    "country-state-city": "^3.0.1",
+    "emailjs-com": "^3.2.0",
     "overlay-navbar": "^1.1.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
@@ -28,6 +32,7 @@
     "react-image-magnifiers": "^1.4.0",
     "react-js-pagination": "^3.0.3",
     "react-material-ui-carousel": "^3.1.1",
+    "react-phone-number-input": "^3.1.45",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.22",
